src/evan-themes/light.scss
/*
  Copyright (C) 2018-present evan GmbH.

  This program is free software: you can redistribute it and/or modify it
  under the terms of the GNU Affero General Public License, version 3,
  as published by the Free Software Foundation.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU Affero General Public License for more details.

  You should have received a copy of the GNU Affero General Public License
  along with this program. If not, see http://www.gnu.org/licenses/ or
  write to the Free Software Foundation, Inc., 51 Franklin Street,
  Fifth Floor, Boston, MA, 02110-1301 USA, or download the license from
  the following URL: https://evan.network/license/

  You can be released from the requirements of the GNU Affero General Public
  License by purchasing a commercial license.
  Buying such a license is mandatory as soon as you use this software or parts
  of it on other blockchains than evan.network.

  For more information, please contact evan GmbH at this address:
  https://evan.network/license/
*/

.evan-angular.evan-light {
  @import '../theme';
  @import '../variables/colors-light';
  @include evanTheme($colors, $evanStyles);

  ion-item.item-md.item-block {
    &.item-input, &.item-select, &.item-toggle {
      &.semi-transparent {
        background: map-get($evanStyles, background-color);
        background-color: map-get($evanStyles, background-color) !important;

        ion-icon {
          background: map-get($evanStyles, color);
        }
      }
    }
  }

  ion-item.item-md.item-block {
    &.item-input, &.item-select, &.item-toggle {
      margin-top: 25px;
      padding: 10px !important;

      background-color: map-get($evanStyles, background-gradient) !important;

      ion-label {
        margin-top: 0 !important;
      }
    }
  }

  .evan-detailed-verification .evan-verification, .evan-verification {
    background-color: map-get($evanStyles, background-color) !important;

    .metadata {
      background-color: map-get($evanStyles, background-color) !important;
    }
  }

  .evan-detailed-verification {
    & > svg {
      border: 1px solid map-get($evanStyles, border-color);
      background-color: map-get($colors, white);

      .evan-detail-hover > div {
        background: map-get($colors, white);

        & > div.body {
          background-color: map-get($evanStyles, background-color);
        }
      }
    }
  }
}

